--- a/site_departement_info/html/index.html
+++ b/site_departement_info/html/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Site de du département informatique.">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="icon" type="image/png" href="./images/icon.png">
-    <title>Département informatique</title>
+    <link rel="icon" type="image/png" href="../images/logo/logo.png">
+    <title>Département informatique - Accueil</title>
 </head>
 
 <body>
@@ -16,8 +16,9 @@
             <h1>Département informatique</h1>
             <ul class="nav-links">
                 <li><a href="index.html" class="nav-item">Accueil</a></li>
-                <li><a href="video.html" class="nav-item">Video</a></li>
-                <li><a href="contact.html" class="nav-item">Contact</a></li>
+                <li><a href="actualite.html" class="nav-item">Actualité</a></li>
+                <li><a href="parcours-et-debouches.html" class="nav-item">Parcours et débouchés</a></li>
+                <li><a href="organisation-des-etudes.html" class="nav-item">Organisation des études</a></li>
             </ul>
         </div>
     </nav>
