--- a/site_departement_info/html/index.html
+++ b/site_departement_info/html/index.html
@@ -12,16 +12,16 @@
 
 <body>
     <nav class="navbar">
-        <div class="container">
             <h1>Département informatique</h1>
             <ul class="nav-links">
-                <li><a href="index.html" class="nav-item">Accueil</a></li>
+                <li><a id="pageactuelle" href="index.html" class="nav-item">Accueil</a></li>
                 <li><a href="actualite.html" class="nav-item">Actualité</a></li>
                 <li><a href="parcours-et-debouches.html" class="nav-item">Parcours et débouchés</a></li>
                 <li><a href="organisation-des-etudes.html" class="nav-item">Organisation des études</a></li>
             </ul>
-        </div>
     </nav>
+</header>
+    <img class="logonormal" src="../images/logo/logonormal.svg"/>
     <button onclick="darkMode()">Darkmode</button>
     <button onclick="lightMode()">LightMode</button>
 
