--- a/site_departement_info/html/organisation-des-etudes.html
+++ b/site_departement_info/html/organisation-des-etudes.html
@@ -11,20 +11,21 @@
 </head>
 
 <body>
+    <div class="top">
+        <h1>BUT Aix en Provence - Département informatique</h1>
+    </div>
     <nav class="navbar">
-        <div class="container">
-            <h1>Département informatique</h1>
             <ul class="nav-links">
                 <li><a href="index.html" class="nav-item">Accueil</a></li>
-                <li><a href="actualite.html" class="nav-item">Actualité</a></li>
                 <li><a href="parcours-et-debouches.html" class="nav-item">Parcours et débouchés</a></li>
-                <li><a href="organisation-des-etudes.html" class="nav-item">Organisation des études</a></li>
+                <li><a id="pageactuelle" href="organisation-des-etudes.html" class="nav-item">Organisation des études</a></li>
+                <li><a href="bde.html" class="nav-item">BDE</a></li>
+                <img id="intra" src="../images/logo/logo-intranet.png">
             </ul>
-        </div>
     </nav>
 
 
-    <script src="script.js"></script>
+    <script src="../javascript/script.js"></script>
 </body>
 
 </html>
