--- a/site_departement_info/html/bde.html
+++ b/site_departement_info/html/bde.html
@@ -7,24 +7,25 @@
     <meta name="description" content="Site de du département informatique.">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" type="image/png" href="../images/logo/logo.png">
-    <title>Département informatique - Actualité</title>
+    <title>Département informatique - BDE</title>
 </head>
 
 <body>
+    <div class="top">
+        <h1>BUT Aix en Provence - Département informatique</h1>
+    </div>
     <nav class="navbar">
-        <div class="container">
-            <h1>Département informatique</h1>
             <ul class="nav-links">
                 <li><a href="index.html" class="nav-item">Accueil</a></li>
-                <li><a href="actualite.html" class="nav-item">Actualité</a></li>
                 <li><a href="parcours-et-debouches.html" class="nav-item">Parcours et débouchés</a></li>
                 <li><a href="organisation-des-etudes.html" class="nav-item">Organisation des études</a></li>
+                <li><a id="pageactuelle" href="bde.html" class="nav-item">BDE</a></li>
+                <img id="intra" src="../images/logo/logo-intranet.png">
             </ul>
-        </div>
     </nav>
 
 
-    <script src="script.js"></script>
+    <script src="../javascript/script.js"></script>
 </body>
 
 </html>
