--- a/site_departement_info/html/index.html
+++ b/site_departement_info/html/index.html
@@ -9,19 +9,22 @@
     <link rel="icon" type="image/png" href="../images/logo/logo.png">
     <title>Département informatique - Accueil</title>
 </head>
-
 <body>
+    <div class="top">
+        <h1>BUT Aix en Provence - Département informatique</h1>
+    </div>
     <nav class="navbar">
-            <h1>Département informatique</h1>
             <ul class="nav-links">
                 <li><a id="pageactuelle" href="index.html" class="nav-item">Accueil</a></li>
-                <li><a href="actualite.html" class="nav-item">Actualité</a></li>
                 <li><a href="parcours-et-debouches.html" class="nav-item">Parcours et débouchés</a></li>
                 <li><a href="organisation-des-etudes.html" class="nav-item">Organisation des études</a></li>
+                <li><a href="bde.html" class="nav-item">BDE</a></li>
+                <img id="intra" src="../images/logo/logo-intranet.png">
             </ul>
     </nav>
-</header>
     <img class="logonormal" src="../images/logo/logonormal.svg"/>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <button onclick="darkMode()">Darkmode</button>
     <button onclick="lightMode()">LightMode</button>
 
@@ -29,7 +32,7 @@
     
     <a href="#top" class="lienfff">revenir en haut</a>
 
-    <script src="script.js"></script>
+    <script src="../javascript/script.js"></script>
 </body>
 
 </html>
