Login + site iut tout bien

--- a/site_departement_info/html/index.html
+++ b/site_departement_info/html/index.html
@@ -20,7 +20,7 @@
                 <li><a href="parcours-et-debouches.html" class="nav-item">Parcours et débouchés</a></li>
                 <li><a href="organisation-des-etudes.html" class="nav-item">Organisation des études</a></li>
                 <li><a href="bde.html" class="nav-item">BDE</a></li>
-                <img id="intra" src="../images/logo/logo-intranet.png">
+                <a href="login.html" class="nav-item"><img id="intra" src="../images/logo/logo-intranet.png"></a>
             </ul>
     </nav>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
