--- a/site_departement_info/html/index.html
+++ b/site_departement_info/html/index.html
@@ -12,6 +12,7 @@
 <body>
     <div class="top">
         <h1>BUT Aix en Provence - Département informatique</h1>
+        <img src="../images/logo/logoblanc.svg" width="20%"/>
     </div>
     <nav class="navbar">
             <ul class="nav-links">
@@ -22,9 +23,9 @@
                 <img id="intra" src="../images/logo/logo-intranet.png">
             </ul>
     </nav>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <img class="logonormal" src="../images/logo/logonormal.svg"/>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <button onclick="darkMode()">Darkmode</button>
     <button onclick="lightMode()">LightMode</button>
 
