--- a/site_departement_info/html/bde.html
+++ b/site_departement_info/html/bde.html
@@ -13,6 +13,7 @@
 <body>
     <div class="top">
         <h1>BUT Aix en Provence - Département informatique</h1>
+        <img src="../images/logo/logoblanc.svg" width="20%"/>
     </div>
     <nav class="navbar">
             <ul class="nav-links">
