--- a/site_departement_info/html/parcours-et-debouches.html
+++ b/site_departement_info/html/parcours-et-debouches.html
@@ -13,6 +13,7 @@
 <body>
     <div class="top">
         <h1>BUT Aix en Provence - Département informatique</h1>
+        <img src="../images/logo/logoblanc.svg" width="20%"/>
     </div>
     <nav class="navbar">
             <ul class="nav-links">
@@ -22,8 +23,8 @@
                 <li><a href="bde.html" class="nav-item">BDE</a></li>
                 <img id="intra" src="../images/logo/logo-intranet.png">
             </ul>
-    </nav>
-
+        </nav>
+    
 
     <script src="../javascript/script.js"></script>
 </body>
