Tout le site connecté

--- a/site_departement_info/html/login.html
+++ b/site_departement_info/html/login.html
@@ -26,7 +26,7 @@
         <label><b>Mot de passe</b></label>
         <input type="password" placeholder="Entrer le mot de passe" name="password" required>
 
-        <input type="submit" id='submit' value='Accéder à lintranet' >
+        <a href="../../IntraNet/index.html"><input type="submit" id='submit' value='Accéder à lintranet' ></a>
     </form>
 </div>
 </body>
