--- a/site_departement_info/html/bde.html
+++ b/site_departement_info/html/bde.html
@@ -18,14 +18,16 @@
     <nav class="navbar">
             <ul class="nav-links">
                 <li><a href="index.html" class="nav-item">Accueil</a></li>
-                <li><a href="parcours-et-debouches.html" class="nav-item">Parcours et débouchés</a></li>
                 <li><a href="organisation-des-etudes.html" class="nav-item">Organisation des études</a></li>
+                <li><a href="parcours-et-debouches.html" class="nav-item">Parcours et débouchés</a></li>
                 <li><a id="pageactuelle" href="bde.html" class="nav-item">BDE</a></li>
                 <img id="intra" src="../images/logo/logo-intranet.png">
             </ul>
     </nav>
-
-
+    <h2 id="titres">Le BDE de notre département</h2>
+    <div class="content">
+    
+    </div>
     <script src="../javascript/script.js"></script>
 </body>
 
