--- a/site_departement_info/html/index.html
+++ b/site_departement_info/html/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="../images/logo/logo.png">
     <title>Département informatique - Accueil</title>
 </head>
-<body>
+<body bgproprieties="fixed">
     <div class="top">
         <h1>BUT Aix en Provence - Département informatique</h1>
         <img src="../images/logo/logoblanc.svg" width="20%"/>
@@ -17,12 +17,63 @@
     <nav class="navbar">
             <ul class="nav-links">
                 <li><a id="pageactuelle" href="index.html" class="nav-item">Accueil</a></li>
-                <li><a href="parcours-et-debouches.html" class="nav-item">Parcours et débouchés</a></li>
                 <li><a href="organisation-des-etudes.html" class="nav-item">Organisation des études</a></li>
+                <li><a href="parcours-et-debouches.html" class="nav-item">Parcours et débouchés</a></li>
                 <li><a href="bde.html" class="nav-item">BDE</a></li>
                 <img id="intra" src="../images/logo/logo-intranet.png">
             </ul>
     </nav>
+    <div class="toutesactu">
+        <div class="actu">
+            <img src="../images/journees.png"/>
+            <p>JOURNÉE PORTES OUVERTES</p>
+            <p>En savoir plus</p>
+        </div>
+        <div class="actu">
+            <img src="../images/JOURNEE_EMPLOYABILITE_2024_1920x1080.jpg"/>
+            <p>Journée de l’employabilité AMU</p>
+            <p>En savoir plus</p>
+        </div>
+        <div class="actu">
+            <img src="../images/SSMU.jpeg"/>
+            <p>TOURNOI SUPER SMASH BROS</p>
+            <p>En savoir plus</p>
+        </div>
+    </div>
+    <h2 id="titres">Objectif de la formation</h2>
+    <div class="content">
+        <p>Le BUT Informatique est un diplôme national dont l'objectif est de former des informaticiens généralistes. 
+        Ceux-ci participent à la conception, la réalisation et la mise en œuvre de solutions informatiques. 
+        Le site d’Aix prépare plus spécialement au métier de "développeur fullstack", ainsi qu’à l’administration 
+        et la sécurisation de systèmes informatiques communicants. Les informaticiens issus de cette formation possèdent
+         des compétences à la fois pratiques et théoriques leur permettant d'envisager une insertion professionnelle immédiate
+          ou une poursuite d'études.<br><br>
+Le département informatique d'Aix-en-Provence propose deux parcours dès la 2ème année :<br>
+• Réalisation d’applications : conception, développement,validation<br>
+Ce parcours se concentre sur le cycle de vie du logiciel : de l’expression du besoin du client, à la conception, à la validation et 
+à la maintenance de l’application. Il forme aux métiers de concepteur-développeur (mobile, web, Internet des objets, jeux vidéo...).<br>
+• Déploiement d’applications communicantes et sécurisées<br>
+Ce parcours prépare les étudiants à la mise en place et à la sécurité des systèmes d'information et des applications. 
+Il forme aux métiers d'administrateur système/réseaux ou applicatifs, cybersécurité, DevOps, intégrateurs d'application, ect<br></p>
+    </div>
+    <h2 id="titres">Infos pratiques</h2>
+    <div class="content">
+        <ul>
+            <li>Formation sélective 3 ans – 180 ECTS</li>
+            <li>Droits d’inscription nationaux : 170€*            </li>
+            <li>Lieu : Aix-en-Provence, site Gaston Berger            </li>
+            <li>Mobilité internationale</li>
+            <li>Parcours personnalisé</li>
+            <li>Professionnalisation : stages & projets</li>
+            <li>Alternance possible en 2ème et 3ème année – Partenariats entreprises</li>
+            <li>Réseau des Diplômés</li>
+            <li>Effectif : 120 étudiants, 4 groupes de TD</li>
+        </ul>
+    </div>
+    <h2 id="titres">Adresse</h2>
+    <div class="content">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2893.393433830907!2d5.448780176271228!3d43.51498776135885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12c98d8e7e25baf9%3A0x426426652ef1a0ae!2s413%20Av.%20Gaston%20Berger%2C%2013100%20Aix-en-Provence!5e0!3m2!1sfr!2sfr!4v1705492389833!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <img class="logonormal" src="../images/logo/logonormal.svg"/>
