Page réservation salle

--- a/IntraNet/ReservationSalle.html
+++ b/IntraNet/ReservationSalle.html
@@ -24,69 +24,65 @@
 
         </nav>
     </header>
-    <div class="e">
+    <form id="form" title="contact" action="mailto:iut-aix-rt@univ-amu.fr" name="Bonjour, je vous contact pour la réservation d'une salle" method="post" enctype="text/plain" class="coucou">
+        <div class="e">
         <div class="resa_texte">
             Jour de la réservation :
         </div>
-    <form method="get" action="" name="coucou" class="coucou">
-        <p>
-            <input type="radio" name="age" value="moins15" id="moins15"> <label for="moins15">19 janvier 2023</label><br>
-            <input type="radio" name="age" value="medium15-25" id="medium15-25"> <label for="medium15-25">22 janvier 2023</label><br>
-            <input type="radio" name="age" value="medium25-40" id="medium25-40"> <label for="medium25-40">23 janvier 2023</label><br>
-            <input type="radio" name="age" value="plus40" id="plus40"> <label for="plus40">24 janvier 2023</label>
-        </p>
-    </form>
+        <p class="choix">
+            <input  type="checkbox" name="Jour de la reservation " value=" 19 janvier 2023" id="moins15"> <label for="moins15">19 janvier 2023</label><br>
+            <input  type="checkbox" name="Jour de la reservation " value=" 22 janvier 2023" id="medium15-25"> <label for="medium15-25">22 janvier 2023</label><br>
+            <input  type="checkbox" name="Jour de la reservation " value=" 23 janvier 2023" id="medium25-40"> <label for="medium25-40">23 janvier 2023</label><br>
+            <input  type="checkbox" name="Jour de la reservation " value=" 24 janvier 2023" id="plus40"> <label for="plus40">24 janvier 2023</label>
+            </p>
         <div class="resa_texte">
             Heure de la réservation :
         </div>
-        <form method="get" action="" name="coucou" class="coucou">
-            <p>
-                <input type="radio" name="age" value="moins15" id="heure_debut"> <label for="moins15">8h15 - 10h15</label><br>
-                <input type="radio" name="age" value="medium15-25" id="heure_matin"> <label for="medium15-25">10h15 - 12h15</label><br>
-                <input type="radio" name="age" value="medium25-40" id="heure_aprem"> <label for="medium25-40">13h30 - 15h30</label><br>
-                <input type="radio" name="age" value="plus40" id="heure_fin"> <label for="plus40">15h30 - 17h30</label>
+            <p aria-required="true" class="choix">
+                <input type="checkbox" name="Heure de la reservation " value=" 8h15 - 10h15" id="heure_debut"> <label for="moins15">8h15 - 10h15</label><br>
+                <input type="checkbox" name="Heure de la reservation " value=" 10h15 - 12h15" id="heure_matin"> <label for="medium15-25">10h15 - 12h15</label><br>
+                <input type="checkbox" name="Heure de la reservation " value=" 13h30 - 15h30" id="heure_aprem"> <label for="medium25-40">13h30 - 15h30</label><br>
+                <input type="checkbox" name="Heure de la reservation " value=" 13h30 - 15h30" id="heure_fin"> <label for="plus40">13h30 - 15h30</label>
             </p>
-        </form>
     </div>
     <div class="salle">
         Salle rez de chaussée :
     </div>
     <div class="salle_rez_de_chaussee_general">
-        <button class="salle_rez_de_chaussee">Salle TP-I002</button>
-        <button class="salle_rez_de_chaussee">Salle TP-I004</button>
-        <button class="salle_rez_de_chaussee">Salle TP-I006</button>
+        <button name="Salle  " value=" TP-I002" class="salle_rez_de_chaussee">Salle TP-I002</button>
+        <button name="Salle  " value=" TP-I004" class="salle_rez_de_chaussee">Salle TP-I004</button>
+        <button name="Salle  " value=" TP-I006" class="salle_rez_de_chaussee">Salle TP-I006</button>
     </div>
     <div class="salle_rez_de_chaussee_general">
-        <button class="salle_rez_de_chaussee">Salle TP-I008</button>
-        <button class="salle_rez_de_chaussee">Salle TP-I010</button>
-        <button class="salle_rez_de_chaussee">Salle TP-I012</button>
+        <button name="Salle  " value=" TP-I008" class="salle_rez_de_chaussee">Salle TP-I008</button>
+        <button name="Salle  " value=" TP-I010" class="salle_rez_de_chaussee">Salle TP-I010</button>
+        <button name="Salle  " value=" TP-I012" class="salle_rez_de_chaussee">Salle TP-I012</button>
     </div>
     <div class="salle">
-        Salle rez de chaussée :
+        1ére étage :
     </div>
     <div class="salle_rez_de_chaussee_general">
-        <button class="salle_rez_de_chaussee">Salle TP-I002</button>
-        <button class="salle_rez_de_chaussee">Salle TP-I004</button>
-        <button class="salle_rez_de_chaussee">Salle TP-I006</button>
+        <button name="Salle  " value=" TP-I110" class="salle_rez_de_chaussee">Salle TP-I110</button>
+        <button name="Salle  " value=" TP-I104" class="salle_rez_de_chaussee">Salle TP-I104</button>
+        <button name="Salle  " value=" TP-I106" class="salle_rez_de_chaussee">Salle TP-I106</button>
     </div>
     <div class="salle_rez_de_chaussee_general">
-        <button class="salle_rez_de_chaussee">Salle TP-I008</button>
-        <button class="salle_rez_de_chaussee">Salle TP-I010</button>
-        <button class="salle_rez_de_chaussee">Salle TP-I012</button>
+        <button name="Salle  " value=" TP-I107" class="salle_rez_de_chaussee">Salle TP-107</button>
+        <button name="Salle  " value=" TP-I109" class="salle_rez_de_chaussee">Salle TP-I109</button>
+        <button name="Salle  " value=" TP-I111" class="salle_rez_de_chaussee">Salle TP-I111</button>
     </div>
     </div>
     <div class="salle">
-        Salle rez de chaussée :
+        2eme étage :
     </div>
     <div class="salle_rez_de_chaussee_general">
-        <button class="salle_rez_de_chaussee">Salle TP-I002</button>
-        <button class="salle_rez_de_chaussee">Salle TP-I004</button>
-        <button class="salle_rez_de_chaussee">Salle TP-I006</button>
+        <button name="Salle  " value=" TP-I212" class="salle_rez_de_chaussee">Salle TP-I212</button>
+        <button name="Salle  " value=" TP-I214" class="salle_rez_de_chaussee">Salle TP-I214</button>
+        <button name="Salle  " value=" TP-I209" class="salle_rez_de_chaussee">Salle TP-I209</button>
     </div>
     <div class="salle_rez_de_chaussee_general">
-        <button class="salle_rez_de_chaussee">Salle TP-I008</button>
-        <button class="salle_rez_de_chaussee">Salle TP-I010</button>
-        <button class="salle_rez_de_chaussee">Salle TP-I012</button>
+        <button name="Salle  " value=" TP-I211" class="salle_rez_de_chaussee">Salle TP-I211</button>
     </div>
+    </form>
 </body>
 </html>
