sdébut boutique BDE site

--- a/IntraNet/BoutiqueBDE.html
+++ b/IntraNet/BoutiqueBDE.html
@@ -21,8 +21,17 @@
             <li><a href="ReservationSalle.html">Reservation salle</a><li>
 
         </ul>
-
     </nav>
 </header>
+    <div class="produit">
+        Boutique du BDE Inform'Aix
+    </div>
+    <div class="vrai_produit">
+        <div class="vrai_vrai_produit">
+            <div><img src="img/t%20shirt%20japon.png"></div>
+            <div>Prix : 20€</div>
+            <div>Taille disponible : Toutes</div>
+        </div>
+    </div>
 </body>
 </html>
