--- a/site_departement_info/html/bde.html
+++ b/site_departement_info/html/bde.html
@@ -19,15 +19,22 @@
             <ul class="nav-links">
                 <li><a href="index.html" class="nav-item">Accueil</a></li>
                 <li><a href="organisation-des-etudes.html" class="nav-item">Organisation des études</a></li>
-                <li><a href="parcours-et-debouches.html" class="nav-item">Parcours et débouchés</a></li>
+                <li><a href="parcours-et-debouches.html" class="nav-item">Parcours</a></li>
                 <li><a id="pageactuelle" href="bde.html" class="nav-item">BDE</a></li>
                 <img id="intra" src="../images/logo/logo-intranet.png">
             </ul>
     </nav>
     <h2 id="titres">Le BDE de notre département</h2>
     <div class="content">
-    
+        <p>Le BDE (Bureau des élèves) est un endroit où l'on peut se detendre</p>
     </div>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <footer class="footer">
+        <img src="../images/logo/logoblanc.svg" width="20%"/>
+        <a class="lien" href="https://discord.gg/k7c97u4DwS" target="_blank"><img src="../images/logo/logo-discord.png" title="Serveur discord" width="5%"/></a>
+        <a class="lien" href="https://www.instagram.com/iutaixmars?igsh=bjcwZnNxaWw1dXVx" target="_blank"><img src="../images/logo/logo-instagram.webp" title="compte instagram" width="5%"/></a>
+    </footer>
     <script src="../javascript/script.js"></script>
 </body>
 
