--- a/site_departement_info/html/index.html
+++ b/site_departement_info/html/index.html
@@ -18,7 +18,7 @@
             <ul class="nav-links">
                 <li><a id="pageactuelle" href="index.html" class="nav-item">Accueil</a></li>
                 <li><a href="organisation-des-etudes.html" class="nav-item">Organisation des études</a></li>
-                <li><a href="parcours-et-debouches.html" class="nav-item">Parcours et débouchés</a></li>
+                <li><a href="parcours-et-debouches.html" class="nav-item">Parcours</a></li>
                 <li><a href="bde.html" class="nav-item">BDE</a></li>
                 <img id="intra" src="../images/logo/logo-intranet.png">
             </ul>
@@ -88,10 +88,7 @@
     
     <img class="logonormal" src="../images/logo/logonormal.svg"/>
     <button onclick="darkMode()">Darkmode</button>
-    <button onclick="lightMode()">LightMode</button>
-
-    <!-- Attaquants -->
-    
+    <button onclick="lightMode()">LightMode</button> 
     <a href="#top" class="lienfff">revenir en haut</a>
 
     <script src="../javascript/script.js"></script>
