--- a/site_departement_info/html/organisation-des-etudes.html
+++ b/site_departement_info/html/organisation-des-etudes.html
@@ -19,7 +19,7 @@
             <ul class="nav-links">
                 <li><a href="index.html" class="nav-item">Accueil</a></li>
                 <li><a id="pageactuelle" href="organisation-des-etudes.html" class="nav-item">Organisation des études</a></li>
-                <li><a href="parcours-et-debouches.html" class="nav-item">Parcours et débouchés</a></li>
+                <li><a href="parcours-et-debouches.html" class="nav-item">Parcours</a></li>
                 <li><a href="bde.html" class="nav-item">BDE</a></li>
                 <img id="intra" src="../images/logo/logo-intranet.png">
             </ul>
