--- a/site_departement_info/html/index.html
+++ b/site_departement_info/html/index.html
@@ -85,11 +85,12 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2893.393433830907!2d5.448780176271228!3d43.51498776135885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12c98d8e7e25baf9%3A0x426426652ef1a0ae!2s413%20Av.%20Gaston%20Berger%2C%2013100%20Aix-en-Provence!5e0!3m2!1sfr!2sfr!4v1705492389833!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
-    
-    <img class="logonormal" src="../images/logo/logonormal.svg"/>
-    <button onclick="darkMode()">Darkmode</button>
-    <button onclick="lightMode()">LightMode</button> 
-    <a href="#top" class="lienfff">revenir en haut</a>
+
+    <footer class="footer">
+        <img src="../images/logo/logoblanc.svg" width="20%"/>
+        <a class="lien" href="https://discord.gg/k7c97u4DwS" target="_blank"><img src="../images/logo/logo-discord.png" title="Serveur discord" width="10%"/></a>
+        <a class="lien" href="https://www.instagram.com/iutaixmars?igsh=bjcwZnNxaWw1dXVx" target="_blank"><img src="../images/logo/logo-instagram.webp" title="compte instagram" width="10%"/></a>
+    </footer>
 
     <script src="../javascript/script.js"></script>
 </body>
